--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,16 @@ h3 {
     margin: auto;
 }
 
+.faq {
+    background: rgba(170,62,166,1);
+    background-image: linear-gradient(138deg, rgba(170,62,166,1) 0%, rgba(87,170,211,1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
+    font-size: 30pt;
+}
+
 .navBox {
     display: flex;
     font-family: 'Montserrat', sans-serif;
